--- a/notebooks/parameter_optimisation.ipynb
+++ b/notebooks/parameter_optimisation.ipynb
@@ -3,12 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "import h5py\n",
     "import pickle\n",
     "\n",
@@ -30,11 +29,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from hs2 import HSDetection, HSClustering\n",
-    "from probe import NeuroSeeker_128\n",
+    "from herdingspikes import HSDetection\n",
+    "from herdingspikes.probe import NeuroSeeker_128\n",
     "\n",
     "\n",
     "data_path = '../datasets/TEST_HIGHPASS_INVERTED_PIP_Kampff_2015_09_03_Pair_9_0.hdf5'\n",
@@ -72,7 +73,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gt_path = '../datasets/HIGHPASS_INVERTED_PIP_Kampff_2015_09_03_Pair_9_0_Thresh_15_SpikesSYCL.txt'\n",
@@ -92,10 +95,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from parameter_optimisation import OptimiseParameters\n",
+    "from herdingspikes import OptimiseParameters\n",
     "\n",
     "# Define parameters to optimise over\n",
     "detec_params_to_opt = {'threshold': (50, 300),\n",
@@ -131,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "results_path = ''\n",
@@ -149,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -173,7 +182,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_heatmap(obj, title):\n",
@@ -196,7 +207,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -213,7 +226,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "orig_count = HSD.spikes.shape[0]\n",
@@ -239,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lower_lim = 0\n",
@@ -249,7 +266,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "probe_raw = Probe.Read(lower_lim, upper_lim).reshape(-1, 128)\n",
@@ -260,10 +279,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "from probes.readUtils import readNeuroSeekerPipette\n",
+    "from herdingspikes.probes.readUtils import readNeuroSeekerPipette\n",
     "\n",
     "gt_raw = readNeuroSeekerPipette(h5py.File(data_path), lower_lim, upper_lim)"
    ]
@@ -271,12 +292,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
-    "%matplotlib notebook\n",
-    "\n",
     "ch = closest_ch\n",
     "\n",
     "ch_spiketrain = HSD.spikes.loc[HSD.spikes['ch'] == ch]\n",
@@ -317,7 +337,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clust_results_path = ''\n",
@@ -334,7 +356,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Most popular cluster={} | alpha={} | bandwidth={} | nPCA={}'.format(c, alpha, bandw, n_PCA))"
@@ -343,7 +367,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -354,7 +380,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -398,7 +426,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "HSC.PlotNeighbourhood(cl=c, radius=0.1)"
@@ -407,7 +437,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8,5))\n",
@@ -417,15 +449,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -439,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
