updated notebooks; merged mea1k notebook

--- a/notebooks/localised_spikes_clustered-mea1k.ipynb
+++ b/notebooks/localised_spikes_clustered-mea1k.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use of the `HSDetection` class"
+    "# Download a MEA1k data set\n",
+    "This recording from a mouse? retina was done by [whom](http://pothal.com/wp-content/uploads/2016/08/unknown-user.jpg) at ETHZ?"
    ]
   },
   {
@@ -15,8 +16,42 @@
    },
    "outputs": [],
    "source": [
+    "import urllib.request\n",
+    "file_url = 'https://datasync.ed.ac.uk/public.php/webdav'\n",
+    "\n",
+    "print('Downloading data file - this may take a while, patience...')\n",
+    "password_mgr = urllib.request.HTTPPasswordMgrWithDefaultRealm()\n",
+    "password_mgr.add_password(None, file_url, \"Bu5OJl7kfP3bBT4\", \"HS2\")\n",
+    "handler = urllib.request.HTTPBasicAuthHandler(password_mgr)\n",
+    "opener = urllib.request.build_opener(handler)\n",
+    "opener.open(file_url)\n",
+    "urllib.request.install_opener(opener)\n",
+    "with urllib.request.urlopen(file_url) as response, open('mea1k_data.h5', 'wb') as out_file:\n",
+    "    data = response.read()\n",
+    "    out_file.write(data)\n",
+    "print('...done')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use of the `HSDetection` class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "from herdingspikes import HSDetection\n",
     "from herdingspikes.probe import Mea1k\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -31,14 +66,14 @@
    "outputs": [],
    "source": [
     "# raw data location\n",
-    "data_path = '/disk/scratch/martino/Clustering/spike_sorting_neuropixel/data/Trace_20171218_16_26_42.raw.h5'\n",
+    "data_file = 'mea1k_data.h5'\n",
     "\n",
     "# detection parameters\n",
     "to_localize = True\n",
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 7\n",
-    "file_name = '../data/ProcessedSpikes_mea1k'"
+    "file_name = 'ProcessedSpikes_mea1k'"
    ]
   },
   {
@@ -49,7 +84,7 @@
    },
    "outputs": [],
    "source": [
-    "Probe = Mea1k(data_path)\n",
+    "Probe = Mea1k(data_file)\n",
     "H = HSDetection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name)"
    ]
@@ -58,7 +93,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -69,7 +104,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# plot some raw traces\n",
+    "\n",
+    "t1,t2 = 0,5000\n",
+    "data = Probe.Read(t1,t2).reshape(t2-t1,Probe.num_channels)\n",
+    "plt.figure(figsize=(16,4))\n",
+    "ch = 67\n",
+    "for ch in range(60,68):\n",
+    "    plt.plot(data[4000:4600,ch])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -80,7 +133,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -91,26 +144,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "H.PlotTracesChannels(100)"
+    "plt.figure(figsize=(10, 10))\n",
+    "H.PlotTracesChannels(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.figure(figsize=(10, 10))\n",
-    "H.PlotAll(invert=True, s=1, alpha=0.05)\n",
+    "plt.figure(figsize=(5, 5))\n",
+    "H.PlotAll(invert=True, s=2, alpha=1)\n",
     "plt.axis('equal');"
    ]
   },
@@ -129,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "from hs2 import HSClustering\n",
+    "from herdingspikes import HSClustering\n",
     "from sklearn.cluster import DBSCAN"
    ]
   },
@@ -153,44 +207,51 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "C.ShapePCA(pca_ncomponents=2, pca_whiten=True)\n",
-    "\n",
-    "C.CombinedClustering(alpha=0.4, bandwidth=1.8, bin_seeding=True,\n",
-    "                     min_bin_freq=100, n_jobs=-1)"
+    "C.CombinedClustering(alpha=5, bandwidth=5, bin_seeding=False, n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.figure(figsize=(10, 10))\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "ax = plt.subplot(111)\n",
     "C.PlotAll(invert=True, s=1, show_labels=True)\n",
-    "plt.title(\"MeanShift, bandwidth=.3, min_bin_freq=10\");\n",
-    "plt.xlim([0,25])\n",
-    "plt.ylim([0,25])"
+    "plt.title(\"MEan Shift\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "units = range(11)\n",
+    "C.PlotShapes(units)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "C.CombinedClustering(eps=0.2, alpha=0.4, clustering_algorithm=DBSCAN,\n",
+    "C.CombinedClustering(eps=1., alpha=1.5, clustering_algorithm=DBSCAN,\n",
     "                    min_samples=5, n_jobs=-1)"
    ]
   },
@@ -198,27 +259,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12, 12))\n",
-    "C.PlotAll(invert=True, s=1)\n",
-    "plt.title(\"DBSCAN eps=0.2, min_samples=5\")\n",
-    "# plt.xlim((1350,1600))"
+    "plt.figure(figsize=(8, 8))\n",
+    "C.PlotAll(invert=True, s=9,alpha=0.5)\n",
+    "plt.title(\"DBSCAN\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "units = (0, 1, 10)\n",
-    "\n",
+    "units = range(6)\n",
     "C.PlotShapes(units)"
    ]
   },
@@ -230,7 +289,7 @@
    },
    "outputs": [],
    "source": [
-    "C.SaveHDF5([\"results/f1.hdf5\"])"
+    "C.SaveHDF5([\"mea1k_sorted.hdf5\"])"
    ]
   },
   {
