--- a/notebooks/localised_spikes_hierlemann_visapy.ipynb
+++ b/notebooks/localised_spikes_hierlemann_visapy.ipynb
@@ -165,7 +165,7 @@
    },
    "outputs": [],
    "source": [
-    "from hs2 import HSClustering"
+    "from herdingspikes import HSClustering"
    ]
   },
   {
