--- a/notebooks/localised_spikes_clustered-neuropixel.ipynb
+++ b/notebooks/localised_spikes_clustered-neuropixel.ipynb
@@ -158,7 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "from hs2 import HSClustering\n",
+    "from herdingspikes import HSClustering\n",
     "# Load from file\n",
     "#C = Clustering(['results/ProcessedSpikes_mea1k.bin', 'results/ProcessedSpikes_mea1k.bin'], cutout_length=41)\n",
     "\n",
@@ -244,6 +244,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
