--- a/notebooks/localised_spikes_clustered-mea1k.ipynb
+++ b/notebooks/localised_spikes_clustered-mea1k.ipynb
@@ -10,9 +10,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data file - this may take a while, patience...\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'urllib' has no attribute 'request'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ab4e49293dcd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Downloading data file - this may take a while, patience...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mpassword_mgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0murllib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHTTPPasswordMgrWithDefaultRealm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mpassword_mgr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_password\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_url\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Bu5OJl7kfP3bBT4\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"HS2\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mhandler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0murllib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHTTPBasicAuthHandler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpassword_mgr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'urllib' has no attribute 'request'"
+     ]
+    }
+   ],
    "source": [
     "import urllib\n",
     "file_url = 'https://datasync.ed.ac.uk/public.php/webdav'\n",
@@ -81,6 +100,7 @@
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 7\n",
+    "file_directory = 'results/'\n",
     "file_name = 'ProcessedSpikes_mea1k'"
    ]
   },
@@ -92,7 +112,8 @@
    "source": [
     "Probe = Mea1k(data_file)\n",
     "H = HSDetection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
-    "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name)"
+    "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name,\n",
+    "                file_directory_name=file_directory)"
    ]
   },
   {
@@ -579,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
