--- a/notebooks/localised_spikes_hierlemann_visapy.ipynb
+++ b/notebooks/localised_spikes_hierlemann_visapy.ipynb
@@ -67,6 +67,7 @@
     "cutout_start = 14\n",
     "cutout_end = 36\n",
     "threshold = 12\n",
+    "file_directory = 'results/'\n",
     "file_name = 'ProcessedSpikes_visapy'"
    ]
   },
@@ -87,7 +88,8 @@
    "source": [
     "Probe = HierlmannVisapyEmulationProbe(data_path)\n",
     "H = HSDetection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
-    "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name, save_all=True)"
+    "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name, \n",
+    "                file_directory_name=file_directory, save_all=True)"
    ]
   },
   {
@@ -481,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
