--- a/notebooks/parameter_optimisation.ipynb
+++ b/notebooks/parameter_optimisation.ipynb
@@ -3,11 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import h5py\n",
     "import pickle\n",
     "\n",
@@ -29,13 +30,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from herdingspikes import HSDetection\n",
-    "from herdingspikes.probe import NeuroSeeker_128\n",
+    "from hs2 import HSDetection, HSClustering\n",
+    "from probe import NeuroSeeker_128\n",
     "\n",
     "\n",
     "data_path = '../datasets/TEST_HIGHPASS_INVERTED_PIP_Kampff_2015_09_03_Pair_9_0.hdf5'\n",
@@ -73,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gt_path = '../datasets/HIGHPASS_INVERTED_PIP_Kampff_2015_09_03_Pair_9_0_Thresh_15_SpikesSYCL.txt'\n",
@@ -95,12 +92,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from herdingspikes import OptimiseParameters\n",
+    "from parameter_optimisation import OptimiseParameters\n",
     "\n",
     "# Define parameters to optimise over\n",
     "detec_params_to_opt = {'threshold': (50, 300),\n",
@@ -136,9 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "results_path = ''\n",
@@ -156,9 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -182,9 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_heatmap(obj, title):\n",
@@ -207,9 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -226,9 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "orig_count = HSD.spikes.shape[0]\n",
@@ -254,9 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lower_lim = 0\n",
@@ -266,9 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "probe_raw = Probe.Read(lower_lim, upper_lim).reshape(-1, 128)\n",
@@ -279,12 +260,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from herdingspikes.probes.readUtils import readNeuroSeekerPipette\n",
+    "from probes.readUtils import readNeuroSeekerPipette\n",
     "\n",
     "gt_raw = readNeuroSeekerPipette(h5py.File(data_path), lower_lim, upper_lim)"
    ]
@@ -292,11 +271,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib notebook\n",
+    "%matplotlib notebook\n",
+    "\n",
     "ch = closest_ch\n",
     "\n",
     "ch_spiketrain = HSD.spikes.loc[HSD.spikes['ch'] == ch]\n",
@@ -337,9 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "clust_results_path = ''\n",
@@ -356,9 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('Most popular cluster={} | alpha={} | bandwidth={} | nPCA={}'.format(c, alpha, bandw, n_PCA))"
@@ -367,9 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -380,9 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -426,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "HSC.PlotNeighbourhood(cl=c, radius=0.1)"
@@ -437,9 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8,5))\n",
@@ -449,18 +417,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -474,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
