--- a/notebooks/localised_spikes_hierlemann_visapy.ipynb
+++ b/notebooks/localised_spikes_hierlemann_visapy.ipynb
@@ -89,7 +89,7 @@
     "Probe = HierlmannVisapyEmulationProbe(data_path)\n",
     "H = HSDetection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name, \n",
-    "                file_directory_name=file_directory, save_all=True)"
+    "                file_directory_name=file_directory, decay_filtering=True, save_all=True)"
    ]
   },
   {
@@ -461,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
