--- a/notebooks/localised_spikes_clustered-neuropixel.ipynb
+++ b/notebooks/localised_spikes_clustered-neuropixel.ipynb
@@ -80,6 +80,7 @@
     "to_localize = True\n",
     "cutout_start = 6\n",
     "cutout_end = 30\n",
+    "num_com_centers = 1\n",
     "threshold = 20\n",
     "file_directory = 'results/'\n",
     "file_name = 'ProcessedSpikesNeuropixel'"
@@ -92,7 +93,7 @@
    "outputs": [],
    "source": [
     "Probe = NeuroPixel(data_path, masked_channels=[36, 75, 112, 151, 188, 227, 264, 303, 340, 379, 384])\n",
-    "H = HSDetection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
+    "H = HSDetection(Probe, to_localize, num_com_centers, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name, \n",
     "                file_directory_name=file_directory, decay_filtering=True, save_all=True)"
    ]
@@ -483,7 +484,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -497,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
