Can specify neighbor radius to automatically make neighbor matrix files

--- a/notebooks/localised_spikes_hierlemann_visapy.ipynb
+++ b/notebooks/localised_spikes_hierlemann_visapy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,20 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/afs/inf.ed.ac.uk/user/s17/s1727843/miniconda3/envs/hs2/lib/python3.7/site-packages/herdingspikes-0.2-py3.7-linux-x86_64.egg/herdingspikes/probe_info/neighbormatrix_hierlemann_visapy_emulation\n",
       "File size: 122400102\n",
       "Number of channels: 102\n"
      ]
     }
    ],
    "source": [
-    "Probe = HierlmannVisapyEmulationProbe(data_path, inner_radius=30)\n",
+    "Probe = HierlmannVisapyEmulationProbe(data_path, inner_radius=30, neighbor_radius=100)\n",
     "H = HSDetection(Probe, to_localize, num_com_centers, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name,  \n",
     "                file_directory_name=file_directory, decay_filtering=False, save_all=True)"
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +105,7 @@
        "4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -182,9 +183,9 @@
       "# Analysing 50000 frames; from 1049956 to 1100059\n",
       "# Analysing 50000 frames; from 1099956 to 1150059\n",
       "# Analysing 49942 frames; from 1149956 to 1200001\n",
-      "# Time taken for detection: 0:00:12.615527\n",
-      "# Time per frame: 0:00:00.010513\n",
-      "# Time per sample: 0:00:00.000103\n"
+      "# Time taken for detection: 0:00:07.884993\n",
+      "# Time per frame: 0:00:00.006571\n",
+      "# Time per sample: 0:00:00.000064\n"
      ]
     }
    ],
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,16 +221,79 @@
      "text": [
       "Spike detected at channel:  55\n",
       "Spike detected at frame:  3691\n",
-      "52.965 118.209\n"
+      "52.965 118.209\n",
+      "0  min  -32  at  22\n",
+      "4  min  -30  at  0\n",
+      "5  min  -86  at  14\n",
+      "8  min  -25  at  0\n",
+      "9  min  -32  at  26\n",
+      "10  min  -31  at  14\n",
+      "12  min  -25  at  0\n",
+      "13  min  -39  at  14\n",
+      "14  min  -54  at  16\n",
+      "15  min  -14  at  31\n",
+      "16  min  -18  at  28\n",
+      "19  min  -32  at  0\n",
+      "20  min  -72  at  14\n",
+      "23  min  -44  at  0\n",
+      "24  min  -52  at  0\n",
+      "25  min  -102  at  14\n",
+      "26  min  -35  at  16\n",
+      "28  min  -43  at  0\n",
+      "29  min  -56  at  0\n",
+      "30  min  -99  at  14\n",
+      "31  min  -25  at  0\n",
+      "35  min  -20  at  0\n",
+      "37  min  -20  at  50\n",
+      "38  min  -54  at  15\n",
+      "39  min  -41  at  0\n",
+      "42  min  -5  at  6\n",
+      "44  min  -31  at  25\n",
+      "45  min  -26  at  13\n",
+      "46  min  -46  at  14\n",
+      "47  min  -98  at  14\n",
+      "49  min  -21  at  50\n",
+      "50  min  -24  at  14\n",
+      "51  min  -14  at  1\n",
+      "54  min  -15  at  19\n",
+      "55  min  -139  at  14\n",
+      "59  min  -19  at  21\n",
+      "60  min  -35  at  42\n",
+      "61  min  -41  at  16\n",
+      "62  min  -23  at  13\n",
+      "66  min  -23  at  0\n",
+      "67  min  -124  at  15\n",
+      "68  min  -33  at  3\n",
+      "71  min  -9  at  25\n",
+      "72  min  -74  at  17\n",
+      "73  min  -54  at  1\n",
+      "74  min  -40  at  0\n",
+      "77  min  -30  at  41\n",
+      "78  min  -40  at  15\n",
+      "79  min  -11  at  15\n",
+      "80  min  -10  at  34\n",
+      "82  min  -38  at  20\n",
+      "83  min  -26  at  15\n",
+      "86  min  -25  at  0\n",
+      "87  min  -16  at  16\n",
+      "88  min  -45  at  15\n",
+      "89  min  -62  at  13\n",
+      "90  min  -70  at  14\n",
+      "93  min  -32  at  0\n",
+      "94  min  -46  at  15\n",
+      "96  min  -18  at  0\n",
+      "97  min  -151  at  14\n",
+      "98  min  -134  at  14\n",
+      "101  min  -46  at  15\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7faf211b3198>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7512e41198>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -253,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -262,16 +326,49 @@
      "text": [
       "Spike detected at channel:  18\n",
       "Spike detected at frame:  6432\n",
-      "49.866 290.011\n"
+      "49.866 290.011\n",
+      "1  min  -23  at  38\n",
+      "2  min  -64  at  37\n",
+      "6  min  -24  at  38\n",
+      "7  min  -42  at  31\n",
+      "15  min  -5  at  33\n",
+      "17  min  -25  at  39\n",
+      "18  min  -75  at  15\n",
+      "21  min  -21  at  11\n",
+      "22  min  -50  at  37\n",
+      "32  min  -41  at  15\n",
+      "33  min  -20  at  32\n",
+      "34  min  -25  at  37\n",
+      "36  min  -39  at  0\n",
+      "40  min  -19  at  15\n",
+      "41  min  -18  at  6\n",
+      "43  min  -17  at  38\n",
+      "48  min  -56  at  36\n",
+      "52  min  -28  at  15\n",
+      "53  min  -21  at  0\n",
+      "54  min  -22  at  39\n",
+      "57  min  -28  at  8\n",
+      "58  min  -61  at  37\n",
+      "65  min  -18  at  4\n",
+      "70  min  -17  at  27\n",
+      "75  min  -25  at  15\n",
+      "76  min  -36  at  14\n",
+      "80  min  -26  at  34\n",
+      "81  min  -23  at  0\n",
+      "84  min  -14  at  8\n",
+      "91  min  -28  at  35\n",
+      "95  min  -40  at  40\n",
+      "99  min  -20  at  25\n",
+      "100  min  -17  at  36\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7faf2098b400>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7510937470>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
