New probe added. SiNAPS being tested

--- a/notebooks/localised_spikes_clustered-neuropixel.ipynb
+++ b/notebooks/localised_spikes_clustered-neuropixel.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('rawDataSample.bin', <http.client.HTTPMessage at 0x7f30d8373b70>)"
+       "('rawDataSample.bin', <http.client.HTTPMessage at 0x7f0aa19d82b0>)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -88,17 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/afs/inf.ed.ac.uk/user/s17/s1727843/miniconda3/envs/hs2/lib/python3.7/site-packages/herdingspikes-0.2-py3.7-linux-x86_64.egg/herdingspikes/probe_info/neighbormatrix_neuropixel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Probe = NeuroPixel(data_path, neighbor_radius=120, masked_channels=[36, 75, 112, 151, 188, 227, 264, 303, 340, 379, 384])\n",
     "H = HSDetection(Probe, to_localize, num_com_centers, cutout_start, cutout_end, threshold,\n",
@@ -108,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -132,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -187,9 +179,9 @@
       "# Analysing 50000 frames; from 1649958 to 1700055\n",
       "# Analysing 50000 frames; from 1699958 to 1750055\n",
       "# Analysing 49945 frames; from 1749958 to 1800000\n",
-      "# Time taken for detection: 0:00:24.069384\n",
-      "# Time per frame: 0:00:00.013372\n",
-      "# Time per sample: 0:00:00.000035\n"
+      "# Time taken for detection: 0:00:21.678273\n",
+      "# Time per frame: 0:00:00.012043\n",
+      "# Time per sample: 0:00:00.000031\n"
      ]
     }
    ],
@@ -199,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -255,10 +247,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f308fc063c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0aa1944198>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
