small corrections to notebooks

--- a/notebooks/localised_spikes_hierlemann_visapy.ipynb
+++ b/notebooks/localised_spikes_hierlemann_visapy.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urllib\n",
+    "import urllib.request\n",
     "file_url = 'https://datasync.ed.ac.uk/public.php/webdav'\n",
     "\n",
     "password_mgr = urllib.request.HTTPPasswordMgrWithDefaultRealm()\n",
@@ -42,8 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "import sys\n",
     "sys.path.append('../')\n",
     "from herdingspikes.hs2 import HSDetection\n",
@@ -577,9 +575,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:hs2]",
+   "display_name": "For HS2",
    "language": "python",
-   "name": "conda-env-hs2-py"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -591,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
