--- a/notebooks/localised_spikes_clustered-mea1k.ipynb
+++ b/notebooks/localised_spikes_clustered-mea1k.ipynb
@@ -23,7 +23,7 @@
     }
    ],
    "source": [
-    "import urllib\n",
+    "import urllib.request\n",
     "file_url = 'https://datasync.ed.ac.uk/public.php/webdav'\n",
     "\n",
     "print('Downloading data file - this may take a while, patience...')\n",
@@ -52,8 +52,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "import sys\n",
     "sys.path.append('../')\n",
     "from herdingspikes.hs2 import HSDetection\n",
@@ -567,7 +565,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -581,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
