--- a/notebooks/localised_spikes_clustered-neuropixel.ipynb
+++ b/notebooks/localised_spikes_clustered-neuropixel.ipynb
@@ -55,8 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "import sys\n",
     "sys.path.append('../')\n",
     "from herdingspikes.hs2 import HSDetection\n",
@@ -513,7 +511,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -527,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
